# priconne-fankit-dl

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: fankit.rs  main.rs  node.rs
src/fankit/: id.rs  info.rs  list_page_index.rs
src/node/: traverse.rs
